# oficina_sdd_v04

./: .gitignore  anotacoes.txt
.github/agents/: copilot-instructions.md
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
backend/: mypy.ini  pyproject.toml  pytest.ini
backend/src/adapters/http/: auth_controller.py  change_password_controller.py  error_handlers.py  identity_controller.py
backend/src/adapters/observability/: audit_logger.py  login_metrics.py
backend/src/adapters/persistence/: account_repository.py  account_repository_bootstrap.py  account_repository_lockout.py  postgres_uow.py
backend/src/adapters/security/: argon2_password_hasher.py  jwt_token_service.py
backend/src/application/dto/: auth_dto.py
backend/src/application/ports/: auth_ports.py
backend/src/application/use_cases/: authenticate_user.py  bootstrap_default_admin.py  change_initial_password.py
backend/src/bootstrap/: app_factory.py  config.py  startup.py
backend/src/domain/entities/: account.py
backend/src/domain/services/: login_attempt_policy.py
backend/src/infrastructure/: clock.py
backend/tests/contract/: test_auth_lockout_contract.py  test_auth_login_contract.py  test_auth_unavailable_contract.py  test_change_initial_password_contract.py
backend/tests/integration/api/: test_auth_e2e.py  test_auth_unavailable_retry_after.py
backend/tests/integration/performance/: test_login_latency.py
backend/tests/integration/persistence/: test_account_repository_login.py  test_bootstrap_admin_repository.py  test_login_lockout_repository.py
backend/tests/unit/application/: test_authenticate_user.py  test_bootstrap_default_admin.py  test_change_initial_password.py
backend/tests/unit/domain/: test_login_attempt_policy.py
frontend/: package.json  vite.config.ts  vitest.config.ts
specs/001-login-admin/: data-model.md  plan.md  quickstart.md  research.md  (+2 more)
(+13 files in other folders)
